unified_tests/functions/immutable_parameter_reassignment/expect/build.text.stderr
lib.copp:2:5: error: cannot assign to immutable binding 'value'
      value = value + 1
      ^
